--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script:
     - docker run -e CI=true gbelinelo/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "sa-east-1"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-sa-east-1-934285670803"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $access_key_id
+    secret_access_key:
+        secure: "$secret_access_key"
